# turkiye-earthquake-impact

./: .buildinfo  .gitignore  README.html  README.md  environment.yml  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh-pages.yml
_sources/: README.md
_sources/docs/: foundational_datasets_and_data_products.md  sample-indicators.md  team.md
_sources/reports/: turkiye-earthquake-strategic-brief.md
docs/: _config.yml  _toc.yml  bibliography.bib  data.html  data.md  foundational_datasets_and_data_products.html  foundational_datasets_and_data_products.md  introduction_to_data_goods.html  requirements.txt  sample-indicators.html  sample-indicators.md  team.html  team.md
notebooks/: conda-lock.yml  environment.yml  world-bank-api.html  world-bank-package.html
notebooks/Earthquake Intensity/: 01-earthquake_intensity.ipynb
notebooks/business-activity-trends/: 01-business-activity-trends.html  01-business-activity-trends.ipynb  README.html  README.md
notebooks/crop-growing-status/: README.md
notebooks/damaged-business-assessment/: 01_clean_mcrsf_buildings.R  01_osm_to_rds.R  _main.R
notebooks/earthquake-intensity/: base_index_earthquake.ipynb  earthquake_intensity.html  earthquake_intensity.ipynb
notebooks/ground-surveys/: premise.html
notebooks/internet-connectivity/: 03a-meta-internet-connectivity.html  03a-meta-internet-connectivity.ipynb  03b-ookla-speedtest-analysis.html  03b-ookla-speedtest-analysis.ipynb  README.html  README.md
notebooks/mobility/: 02a-activity.html  02b-poi-visitation.html  README.html  README.md
notebooks/nighttime-lights/: 03_aggregate.R  (+11 more)
reports/: turkiye-earthquake-strategic-brief.html  turkiye-earthquake-strategic-brief.md
(+56 files in other folders)
