[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "turkiye-earthquake-impact"
description = "Using Alternative Data to Understand Economic Impacts of the 2023 Turkey–Syria Earthquake"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = [
	"sentinel",
	"synthetic aperture radar",
	"nighttime lights",
	"black marble",
	"world bank",
]
authors = [{ name = "World Bank Data Lab", email = "datalab@worldbank.org" }]
maintainers = [
	{ name = "Robert Marty", email = "rmarty@worldbank.org" },
	{ name = "Gabriel Stefanini Vicente", email = "gvicente@worldbank.org" },
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.10"
[project.optional-dependencies]
docs = [
	"docutils==0.17.1",     # https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=0.15.1",
]
[project.urls]
"Homepage" = "https://datapartnership.github.io/"
"Bug Reports" = "https://github.com/datapartnership/turkiye-earthquake-impact/issues"
"Source" = "https://github.com/datapartnership/turkiye-earthquake-impact"

[tool.codespell]
skip = './.git,docs/_build,docs/bibliography.bib,*.py,*.R,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,"

[tool.hatch.build.targets.wheel]
packages = ["src/turkiye_earthquake_impact"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
